cabal-version:      3.0
name:               music-archiver
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             solomon
maintainer:         ssbothwell@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable music-archiver
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0
                    , directory
                    , filepath
                    , text
                    , text-icu
                    , turtle
    hs-source-dirs:   app
    default-language: GHC2021
